create test for email in randomize function

--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/luan0ap/fake-data-bot#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^23.6.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-plugin-transform-es2015-modules-umd": "6.24.1",
+    "babel-preset-env": "1.7.0",
+    "jest": "23.6.0",
+    "webpack": "4.20.2",
+    "webpack-cli": "3.1.2"
   }
 }
