--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "jest": "23.6.0",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.2"
+  },
+  "dependencies": {
+    "faker": "^4.1.0"
   }
 }
